@@ -99,6 +99,7 @@ class _SetRoleState extends State<SetRole> {
               itemBuilder: (context, index) {
                 // get a user
                 Users user = value.userListApprover[index];
+                print(user);
                 return ParticipantTile(user: user);
               },
             ),
